Enhance random score calculation in ScoreController to incorporate weight factors and improve output formatting